--- a/site/manager.html
+++ b/site/manager.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="/style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
-        if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) document.documentElement.classList.add('dark');
-        tailwind.config = { darkMode: 'class' };
+        // 放在开头防止白屏闪烁，Tailwind 配置移入 script.js 确保全局生效
+        if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+            document.documentElement.classList.add('dark');
+        }
     </script>
 </head>
-<body class="bg-slate-50 dark:bg-slate-900 text-slate-900 dark:text-slate-100">
+<body class="bg-slate-50 dark:bg-slate-900 text-slate-900 dark:text-slate-100 transition-colors duration-300">
     <header class="fixed top-0 w-full z-50 header-shell h-16">
         <div class="max-w-6xl mx-auto px-6 h-full flex items-center justify-between">
             <a href="/" class="flex items-center gap-2 group">
@@ -19,14 +21,12 @@
                 <span class="font-bold text-lg tracking-tight text-slate-900 dark:text-white">PyAuthSkin</span>
             </a>
             <div class="flex items-center gap-4">
-                <button onclick="toggleTheme()" class="p-2 rounded-xl hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors">
+                <button onclick="window.toggleTheme()" class="p-2 rounded-xl hover:bg-slate-100 dark:hover:bg-slate-800 transition-all active:scale-90">
                     <svg class="hidden dark:block w-5 h-5 text-amber-400" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 9h-1m15.364-6.364l-.707.707M6.343 17.657l-.707.707m12.728 0l-.707-.707M6.343 6.343l-.707-.707M12 8a4 4 0 100 8 4 4 0 000-8z" /></svg>
                     <svg class="block dark:hidden w-5 h-5 text-slate-600" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" /></svg>
                 </button>
                 <nav class="flex items-center gap-4 border-l border-slate-200 dark:border-slate-700 pl-4">
-                    <div class="flex items-center gap-2 group">
-                        <span class="text-sm font-bold text-slate-700 dark:text-slate-200">{{ user.username }}</span>
-                    </div>
+                    <span class="text-sm font-bold text-slate-700 dark:text-slate-200">{{ user.username }}</span>
                 </nav>
             </div>
         </div>
@@ -34,15 +34,15 @@
 
     <div id="pjax-container" class="pt-24 pb-12">
         <div id="delete-modal" class="fixed inset-0 z-[100] hidden items-center justify-center p-4">
-            <div class="absolute inset-0 bg-slate-900/60 backdrop-blur-sm" onclick="closeDeleteModal()"></div>
+            <div class="absolute inset-0 bg-slate-900/60 backdrop-blur-sm" onclick="window.closeDeleteModal()"></div>
             <div class="relative bg-white dark:bg-slate-800 rounded-3xl p-8 max-w-sm w-full shadow-2xl transform scale-95 transition-transform duration-200" id="modal-card">
                 <div class="w-16 h-16 bg-red-100 dark:bg-red-900/30 rounded-2xl flex items-center justify-center text-red-500 mb-6 mx-auto">
                     <svg class="w-8 h-8" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" /></svg>
                 </div>
                 <h3 class="text-xl font-bold text-center text-slate-900 dark:text-white mb-2">Delete Texture?</h3>
-                <p class="text-slate-500 dark:text-slate-400 text-center text-sm mb-8 leading-relaxed">This action will permanently remove this skin from your vault. This cannot be undone.</p>
+                <p class="text-slate-500 dark:text-slate-400 text-center text-sm mb-8 leading-relaxed">This action will permanently remove this skin from your vault.</p>
                 <div class="flex gap-3">
-                    <button onclick="closeDeleteModal()" class="flex-1 py-3 bg-slate-100 dark:bg-slate-700 text-slate-600 dark:text-slate-300 font-bold rounded-xl hover:bg-slate-200 dark:hover:bg-slate-600 transition-colors">Cancel</button>
+                    <button onclick="window.closeDeleteModal()" class="flex-1 py-3 bg-slate-100 dark:bg-slate-700 text-slate-600 dark:text-slate-300 font-bold rounded-xl hover:bg-slate-200 transition-colors">Cancel</button>
                     <button id="confirm-delete-btn" class="flex-1 py-3 bg-red-500 text-white font-bold rounded-xl hover:bg-red-600 shadow-lg shadow-red-500/20 transition-all active:scale-95">Delete</button>
                 </div>
             </div>
@@ -59,7 +59,6 @@
                         {{ players|length }} Profiles, {{ skins|length }} Skins
                     </div>
                     <a href="/logout" class="text-xs font-bold text-red-500 hover:text-red-600 transition-colors uppercase tracking-wider flex items-center gap-1.5 px-3 py-1.5 rounded-lg hover:bg-red-50 dark:hover:bg-red-900/10">
-                        <svg class="w-3.5 h-3.5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" /></svg>
                         Logout
                     </a>
                 </div>
@@ -76,14 +75,12 @@
                         <div class="px-1">
                             <h3 class="font-bold text-sm truncate text-slate-800 dark:text-slate-200 mb-0.5">{{ skin.display_name or 'Unnamed' }}</h3>
                             <p class="text-[10px] uppercase font-black text-slate-400 tracking-tighter mb-4 flex items-center gap-1.5">
-                                <span>
-                                    {% if skin.model == 'classic' %}Steve{% elif skin.model == 'slim' %}Alex{% else %}{{ skin.model }}{% endif %}
-                                </span>
+                                <span>{% if skin.model == 'classic' %}Steve{% else %}Alex{% endif %}</span>
                                 <span class="w-1 h-1 bg-slate-300 dark:bg-slate-600 rounded-full"></span>
                                 <span>{{ skin.width }}x{{ skin.height }}</span>
                             </p>
                             <form action="/manager/delete_skin/{{ skin.id }}" method="post" id="delete-form-{{ skin.id }}">
-                                <button type="button" onclick="openDeleteModal('delete-form-{{ skin.id }}')" class="w-full py-2 bg-red-50 dark:bg-red-900/20 text-red-600 dark:text-red-400 text-[10px] font-black uppercase rounded-xl hover:bg-red-100 dark:hover:bg-red-900/40 transition-all active:scale-95">
+                                <button type="button" onclick="window.openDeleteModal('delete-form-{{ skin.id }}')" class="w-full py-2 bg-red-50 dark:bg-red-900/20 text-red-600 dark:text-red-400 text-[10px] font-black uppercase rounded-xl hover:bg-red-100 transition-all active:scale-95">
                                     Delete
                                 </button>
                             </form>
@@ -113,12 +110,12 @@
                                         <option value="{{ skin.id }}" {% if player.skin_texture and player.skin_texture.id == skin.id %}selected{% endif %}>{{ skin.display_name or 'Unnamed' }}</option>
                                         {% endfor %}
                                     </select>
-                                    <button type="submit" class="py-2 px-4 bg-emerald-50 dark:bg-emerald-900/20 text-emerald-600 dark:text-emerald-400 text-sm font-black uppercase rounded-xl hover:bg-emerald-100 dark:hover:bg-emerald-900/40 transition-all active:scale-95">
+                                    <button type="submit" class="py-2 px-4 bg-emerald-50 dark:bg-emerald-900/20 text-emerald-600 dark:text-emerald-400 text-sm font-black uppercase rounded-xl hover:bg-emerald-100 transition-all active:scale-95">
                                         Update
                                     </button>
                                 </form>
                                 <form action="/manager/delete_player/{{ player.id }}" method="post">
-                                    <button type="submit" class="py-2 px-4 bg-red-50 dark:bg-red-900/20 text-red-600 dark:text-red-400 text-sm font-black uppercase rounded-xl hover:bg-red-100 dark:hover:bg-red-900/40 transition-all active:scale-95">
+                                    <button type="submit" class="py-2 px-4 bg-red-50 dark:bg-red-900/20 text-red-600 dark:text-red-400 text-sm font-black uppercase rounded-xl hover:bg-red-100 transition-all active:scale-95">
                                         Delete
                                     </button>
                                 </form>
@@ -129,16 +126,16 @@
                 </div>
             </section>
 
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-start">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <section>
-                    <h3 class="text-2xl font-bold mb-6 text-slate-900 dark:text-white">Create New Profile</h3>
+                    <h3 class="text-2xl font-bold mb-6 text-slate-900 dark:text-white">Create Profile</h3>
                     <div class="card-base p-6">
                         <form action="/manager/create_player" method="post" class="space-y-4">
                             <div>
                                 <label class="label-caps text-sm block mb-2">Player Name</label>
                                 <input type="text" name="name" required placeholder="Enter player name" class="input-field" maxlength="255">
                             </div>
-                            <button type="submit" class="w-full py-3 bg-emerald-50 dark:bg-emerald-900/20 text-emerald-600 dark:text-emerald-400 text-sm font-black uppercase rounded-xl hover:bg-emerald-100 dark:hover:bg-emerald-900/40 transition-all active:scale-95">
+                            <button type="submit" class="w-full py-3 bg-emerald-50 dark:bg-emerald-900/20 text-emerald-600 dark:text-emerald-400 text-sm font-black uppercase rounded-xl hover:bg-emerald-100 transition-all active:scale-95">
                                 Create Profile
                             </button>
                         </form>
@@ -146,32 +143,26 @@
                 </section>
 
                 <section>
-                    <h3 class="text-2xl font-bold mb-6 text-slate-900 dark:text-white">Upload New Skin</h3>
+                    <h3 class="text-2xl font-bold mb-6 text-slate-900 dark:text-white">Upload Skin</h3>
                     <div class="card-base p-6">
                         <form action="/manager/upload_skin" method="post" enctype="multipart/form-data" class="space-y-4">
                             <div>
-                                <label for="display_name" class="label-caps text-sm block mb-2">Display Name</label>
-                                <input type="text" name="display_name" id="display_name" required placeholder="e.g. My Favorite Skin" class="input-field">
+                                <label class="label-caps text-sm block mb-2">Display Name</label>
+                                <input type="text" name="display_name" required placeholder="Skin name" class="input-field">
                             </div>
                             <div>
-                                <label for="model" class="label-caps text-sm block mb-2">Player Model</label>
-                                <select name="model" id="model" class="input-field appearance-none cursor-pointer">
+                                <label class="label-caps text-sm block mb-2">Model</label>
+                                <select name="model" class="input-field appearance-none cursor-pointer">
                                     <option value="classic">Steve (Classic)</option>
                                     <option value="slim">Alex (Slim)</option>
                                 </select>
                             </div>
                             <div>
-                                <label for="skin_file" class="label-caps text-sm block mb-2">Skin File (.png)</label>
-                                <input type="file" name="skin_file" id="skin_file" required accept="image/png" 
-                                    class="w-full text-sm text-slate-500 dark:text-slate-400
-                                    file:mr-4 file:py-2 file:px-4
-                                    file:rounded-xl file:border-0
-                                    file:text-[10px] file:font-black file:uppercase
-                                    file:bg-emerald-50 file:text-emerald-600
-                                    dark:file:bg-emerald-900/20 dark:file:text-emerald-400
-                                    hover:file:bg-emerald-100 transition-all">
+                                <label class="label-caps text-sm block mb-2">Skin File</label>
+                                <input type="file" name="skin_file" required accept="image/png" 
+                                    class="w-full text-sm text-slate-500 file:mr-4 file:py-2 file:px-4 file:rounded-xl file:border-0 file:text-[10px] file:font-black file:uppercase file:bg-emerald-50 file:text-emerald-600 dark:file:bg-emerald-900/20 dark:file:text-emerald-400 transition-all">
                             </div>
-                            <button type="submit" class="w-full py-3 bg-emerald-50 dark:bg-emerald-900/20 text-emerald-600 dark:text-emerald-400 text-sm font-black uppercase rounded-xl hover:bg-emerald-100 dark:hover:bg-emerald-900/40 transition-all active:scale-95">
+                            <button type="submit" class="w-full py-3 bg-emerald-50 dark:bg-emerald-900/20 text-emerald-600 dark:text-emerald-400 text-sm font-black uppercase rounded-xl hover:bg-emerald-100 transition-all active:scale-95">
                                 Upload Skin
                             </button>
                         </form>
@@ -180,7 +171,6 @@
             </div>
         </main>
     </div>
-
     <script src="/script.js"></script>
 </body>
 </html>
