--- a/site/manager.html
+++ b/site/manager.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="/style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
-        // 放在开头防止白屏闪烁，Tailwind 配置移入 script.js 确保全局生效
         if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
             document.documentElement.classList.add('dark');
         }
@@ -25,9 +24,13 @@
                     <svg class="hidden dark:block w-5 h-5 text-amber-400" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 9h-1m15.364-6.364l-.707.707M6.343 17.657l-.707.707m12.728 0l-.707-.707M6.343 6.343l-.707-.707M12 8a4 4 0 100 8 4 4 0 000-8z" /></svg>
                     <svg class="block dark:hidden w-5 h-5 text-slate-600" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" /></svg>
                 </button>
-                <nav class="flex items-center gap-4 border-l border-slate-200 dark:border-slate-700 pl-4">
-                    <span class="text-sm font-bold text-slate-700 dark:text-slate-200">{{ user.username }}</span>
-                </nav>
+                <div class="flex items-center gap-4 pl-4 border-l border-slate-200 dark:border-slate-700">
+                    <div class="flex items-center gap-2 px-3 py-1.5 bg-slate-100 dark:bg-slate-800 rounded-lg">
+                        <svg class="w-4 h-4 text-slate-400" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" /></svg>
+                        <span class="text-sm font-bold text-slate-700 dark:text-slate-200">{{ user.username }}</span>
+                    </div>
+                    <a href="/logout" class="text-xs font-bold text-red-500 hover:text-red-600 transition-colors uppercase tracking-wider">Logout</a>
+                </div>
             </div>
         </div>
     </header>
@@ -39,8 +42,8 @@
                 <div class="w-16 h-16 bg-red-100 dark:bg-red-900/30 rounded-2xl flex items-center justify-center text-red-500 mb-6 mx-auto">
                     <svg class="w-8 h-8" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" /></svg>
                 </div>
-                <h3 class="text-xl font-bold text-center text-slate-900 dark:text-white mb-2">Delete Texture?</h3>
-                <p class="text-slate-500 dark:text-slate-400 text-center text-sm mb-8 leading-relaxed">This action will permanently remove this skin from your vault.</p>
+                <h3 class="text-xl font-bold text-center text-slate-900 dark:text-white mb-2">Confirm Delete?</h3>
+                <p class="text-slate-500 dark:text-slate-400 text-center text-sm mb-8 leading-relaxed">This action will permanently remove this item from your vault.</p>
                 <div class="flex gap-3">
                     <button onclick="window.closeDeleteModal()" class="flex-1 py-3 bg-slate-100 dark:bg-slate-700 text-slate-600 dark:text-slate-300 font-bold rounded-xl hover:bg-slate-200 transition-colors">Cancel</button>
                     <button id="confirm-delete-btn" class="flex-1 py-3 bg-red-500 text-white font-bold rounded-xl hover:bg-red-600 shadow-lg shadow-red-500/20 transition-all active:scale-95">Delete</button>
@@ -49,126 +52,106 @@
         </div>
 
         <main class="max-w-6xl mx-auto px-6">
-            <header class="mb-12 flex items-end justify-between">
-                <div>
-                    <h2 class="text-4xl font-extrabold tracking-tight text-slate-900 dark:text-white">Profile Manager</h2>
-                    <p class="text-slate-500">Manage your Minecraft profiles and skins</p>
-                </div>
-                <div class="flex items-center gap-4">
-                    <div class="text-[10px] font-bold text-slate-400 uppercase tracking-widest border border-slate-200 dark:border-slate-800 px-3 py-1 rounded-full">
-                        {{ players|length }} Profiles, {{ skins|length }} Skins
-                    </div>
-                    <a href="/logout" class="text-xs font-bold text-red-500 hover:text-red-600 transition-colors uppercase tracking-wider flex items-center gap-1.5 px-3 py-1.5 rounded-lg hover:bg-red-50 dark:hover:bg-red-900/10">
-                        Logout
-                    </a>
-                </div>
+            <header class="mb-12">
+                <h2 class="text-4xl font-extrabold tracking-tight text-slate-900 dark:text-white">Profile Manager</h2>
+                <p class="text-slate-500">Manage your Minecraft textures and character profiles.</p>
             </header>
 
-            <section class="mb-12">
-                <h3 class="text-2xl font-bold mb-6 text-slate-900 dark:text-white">Your Skins</h3>
+            <section class="mb-16">
+                <h3 class="text-2xl font-bold mb-6 flex items-center gap-2">
+                    <span class="w-2 h-8 bg-emerald-500 rounded-full"></span>
+                    Your Skins
+                </h3>
                 <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-6">
                     {% for skin in skins %}
-                    <div class="card-base p-4 relative border-2 border-transparent hover:border-slate-200 dark:hover:border-slate-700">
-                        <div class="avatar-box aspect-[3/4] mb-4 relative group">
-                            <img src="/skins/{{ skin.hash }}_avatar.png" class="w-3/4 h-3/4 object-contain pixelated group-hover:scale-110 transition-transform duration-500" />
+                    <div class="card-base p-4 relative border-2 border-transparent hover:border-emerald-500/30">
+                        <div class="avatar-box aspect-[3/4] mb-4">
+                            <img src="/skins/{{ skin.hash }}_avatar.png" class="w-3/4 h-3/4 object-contain pixelated hover:scale-110 transition-transform duration-500" />
                         </div>
-                        <div class="px-1">
-                            <h3 class="font-bold text-sm truncate text-slate-800 dark:text-slate-200 mb-0.5">{{ skin.display_name or 'Unnamed' }}</h3>
-                            <p class="text-[10px] uppercase font-black text-slate-400 tracking-tighter mb-4 flex items-center gap-1.5">
+                        <div class="px-1 text-center">
+                            <h3 class="font-bold text-sm truncate mb-0.5">{{ skin.display_name or 'Unnamed' }}</h3>
+                            <p class="text-[10px] uppercase font-bold text-slate-400 mb-4 flex items-center justify-center gap-1.5">
                                 <span>{% if skin.model == 'classic' %}Steve{% else %}Alex{% endif %}</span>
                                 <span class="w-1 h-1 bg-slate-300 dark:bg-slate-600 rounded-full"></span>
                                 <span>{{ skin.width }}x{{ skin.height }}</span>
                             </p>
-                            <form action="/manager/delete_skin/{{ skin.id }}" method="post" id="delete-form-{{ skin.id }}">
-                                <button type="button" onclick="window.openDeleteModal('delete-form-{{ skin.id }}')" class="w-full py-2 bg-red-50 dark:bg-red-900/20 text-red-600 dark:text-red-400 text-[10px] font-black uppercase rounded-xl hover:bg-red-100 transition-all active:scale-95">
+                            <form action="/manager/delete_skin/{{ skin.id }}" method="post" id="del-skin-{{ skin.id }}">
+                                <button type="button" onclick="window.openDeleteModal('del-skin-{{ skin.id }}')" class="w-full py-1.5 bg-red-50 dark:bg-red-900/10 text-red-500 text-[10px] font-black uppercase rounded-lg hover:bg-red-100 transition-all">
                                     Delete
                                 </button>
                             </form>
                         </div>
                     </div>
                     {% endfor %}
+                    
+                    <div class="card-base p-4 border-dashed border-2 border-slate-200 dark:border-slate-800 bg-transparent flex flex-col justify-center min-h-[220px]">
+                        <h4 class="text-sm font-bold text-center mb-3">Upload New</h4>
+                        <form action="/manager/upload_skin" method="post" enctype="multipart/form-data" class="space-y-2">
+                            <input type="text" name="display_name" required placeholder="Name" class="w-full px-3 py-1.5 text-xs bg-slate-100 dark:bg-slate-800 rounded-lg outline-none">
+                            <select name="model" class="w-full px-3 py-1.5 text-xs bg-slate-100 dark:bg-slate-800 rounded-lg outline-none">
+                                <option value="classic">Steve (Classic)</option>
+                                <option value="slim">Alex (Slim)</option>
+                            </select>
+                            <input type="file" name="skin_file" required accept="image/png" class="block w-full text-[10px] text-slate-500 file:mr-2 file:py-1 file:px-2 file:rounded-md file:border-0 file:text-[10px] file:bg-emerald-50 file:text-emerald-700 dark:file:bg-emerald-900/30">
+                            <button type="submit" class="w-full py-2 bg-emerald-500 text-white text-[10px] font-bold uppercase rounded-lg shadow-md active:scale-95 transition-all">Upload</button>
+                        </form>
+                    </div>
                 </div>
             </section>
 
             <section class="mb-12">
-                <h3 class="text-2xl font-bold mb-6 text-slate-900 dark:text-white">Your Profiles</h3>
-                <div class="space-y-4">
+                <h3 class="text-2xl font-bold mb-6 flex items-center gap-2">
+                    <span class="w-2 h-8 bg-blue-500 rounded-full"></span>
+                    Your Profiles
+                </h3>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                     {% for player in players %}
-                    <div class="card-base p-6">
-                        <div class="flex items-center justify-between">
-                            <div class="flex items-center gap-4">
-                                <h4 class="text-lg font-bold text-slate-900 dark:text-white">{{ player.name }}</h4>
-                                <span class="text-sm text-slate-500 dark:text-slate-400">
-                                    Current Skin: {% if player.skin_texture %}{{ player.skin_texture.display_name or 'Unnamed' }}{% else %}None{% endif %}
-                                </span>
+                    <div class="card-base p-5 flex flex-col justify-between group">
+                        <div class="flex justify-between items-start mb-4">
+                            <div>
+                                <span class="label-caps !mb-0 text-blue-500">Character</span>
+                                <h4 class="text-xl font-extrabold text-slate-900 dark:text-white">{{ player.name }}</h4>
                             </div>
-                            <div class="flex items-center gap-4">
-                                <form action="/manager/set_skin_for_player/{{ player.id }}" method="post" class="flex items-center gap-2">
-                                    <select name="skin_id" class="input-field appearance-none cursor-pointer text-sm">
-                                        <option value="">No Skin</option>
-                                        {% for skin in skins %}
-                                        <option value="{{ skin.id }}" {% if player.skin_texture and player.skin_texture.id == skin.id %}selected{% endif %}>{{ skin.display_name or 'Unnamed' }}</option>
-                                        {% endfor %}
-                                    </select>
-                                    <button type="submit" class="py-2 px-4 bg-emerald-50 dark:bg-emerald-900/20 text-emerald-600 dark:text-emerald-400 text-sm font-black uppercase rounded-xl hover:bg-emerald-100 transition-all active:scale-95">
-                                        Update
-                                    </button>
-                                </form>
-                                <form action="/manager/delete_player/{{ player.id }}" method="post">
-                                    <button type="submit" class="py-2 px-4 bg-red-50 dark:bg-red-900/20 text-red-600 dark:text-red-400 text-sm font-black uppercase rounded-xl hover:bg-red-100 transition-all active:scale-95">
-                                        Delete
-                                    </button>
-                                </form>
-                            </div>
+                            <form action="/manager/delete_player/{{ player.id }}" method="post" id="del-player-{{ player.id }}">
+                                <button type="button" onclick="window.openDeleteModal('del-player-{{ player.id }}')" class="p-2 text-slate-300 hover:text-red-500 hover:bg-red-50 dark:hover:bg-red-900/20 rounded-xl transition-all">
+                                    <svg class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" /></svg>
+                                </button>
+                            </form>
                         </div>
+                        <form action="/manager/set_skin_for_player/{{ player.id }}" method="post" class="relative">
+                            <label class="label-caps">Assigned Skin</label>
+                            <div class="relative">
+                                <select name="skin_id" 
+                                    onchange="this.form.dispatchEvent(new Event('submit', {cancelable: true, bubbles: true}))"
+                                    class="w-full appearance-none bg-emerald-50 dark:bg-emerald-900/20 text-emerald-600 dark:text-emerald-400 font-bold py-3 px-4 pr-10 rounded-xl border border-emerald-100 dark:border-emerald-900/30 cursor-pointer focus:outline-none transition-all text-sm">
+                                    <option value="">No Skin</option>
+                                    {% for skin in skins %}
+                                    <option value="{{ skin.id }}" {% if player.skin_texture and player.skin_texture.id == skin.id %}selected{% endif %}>
+                                        {{ skin.display_name or 'Unnamed' }}
+                                    </option>
+                                    {% endfor %}
+                                </select>
+                                <div class="absolute right-4 top-1/2 -translate-y-1/2 pointer-events-none text-emerald-500">
+                                    <svg class="w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" /></svg>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                     {% endfor %}
+
+                    <div class="card-base p-5 border-dashed border-2 border-slate-200 dark:border-slate-800 bg-transparent flex flex-col justify-center">
+                        <form action="/manager/create_player" method="post" class="flex gap-3 items-end">
+                            <div class="flex-1">
+                                <label class="label-caps">New Name</label>
+                                <input type="text" name="name" required placeholder="Name..." class="input-field !py-2.5">
+                            </div>
+                            <button type="submit" class="bg-slate-900 dark:bg-white dark:text-slate-900 text-white font-bold py-2.5 px-6 rounded-xl active:scale-95 transition-all text-sm">
+                                Add
+                            </button>
+                        </form>
+                    </div>
                 </div>
             </section>
-
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-                <section>
-                    <h3 class="text-2xl font-bold mb-6 text-slate-900 dark:text-white">Create Profile</h3>
-                    <div class="card-base p-6">
-                        <form action="/manager/create_player" method="post" class="space-y-4">
-                            <div>
-                                <label class="label-caps text-sm block mb-2">Player Name</label>
-                                <input type="text" name="name" required placeholder="Enter player name" class="input-field" maxlength="255">
-                            </div>
-                            <button type="submit" class="w-full py-3 bg-emerald-50 dark:bg-emerald-900/20 text-emerald-600 dark:text-emerald-400 text-sm font-black uppercase rounded-xl hover:bg-emerald-100 transition-all active:scale-95">
-                                Create Profile
-                            </button>
-                        </form>
-                    </div>
-                </section>
-
-                <section>
-                    <h3 class="text-2xl font-bold mb-6 text-slate-900 dark:text-white">Upload Skin</h3>
-                    <div class="card-base p-6">
-                        <form action="/manager/upload_skin" method="post" enctype="multipart/form-data" class="space-y-4">
-                            <div>
-                                <label class="label-caps text-sm block mb-2">Display Name</label>
-                                <input type="text" name="display_name" required placeholder="Skin name" class="input-field">
-                            </div>
-                            <div>
-                                <label class="label-caps text-sm block mb-2">Model</label>
-                                <select name="model" class="input-field appearance-none cursor-pointer">
-                                    <option value="classic">Steve (Classic)</option>
-                                    <option value="slim">Alex (Slim)</option>
-                                </select>
-                            </div>
-                            <div>
-                                <label class="label-caps text-sm block mb-2">Skin File</label>
-                                <input type="file" name="skin_file" required accept="image/png" 
-                                    class="w-full text-sm text-slate-500 file:mr-4 file:py-2 file:px-4 file:rounded-xl file:border-0 file:text-[10px] file:font-black file:uppercase file:bg-emerald-50 file:text-emerald-600 dark:file:bg-emerald-900/20 dark:file:text-emerald-400 transition-all">
-                            </div>
-                            <button type="submit" class="w-full py-3 bg-emerald-50 dark:bg-emerald-900/20 text-emerald-600 dark:text-emerald-400 text-sm font-black uppercase rounded-xl hover:bg-emerald-100 transition-all active:scale-95">
-                                Upload Skin
-                            </button>
-                        </form>
-                    </div>
-                </section>
-            </div>
         </main>
     </div>
     <script src="/script.js"></script>
