--- a/site/register.html
+++ b/site/register.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,11 +18,11 @@
                 <span class="font-bold text-lg tracking-tight text-slate-900 dark:text-white">PyAuthSkin</span>
             </a>
             <div class="flex items-center gap-4">
-                <button onclick="toggleTheme()" class="p-2 rounded-xl hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors">
+                <button onclick="window.toggleTheme()" class="p-2 rounded-xl hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors">
                     <svg class="hidden dark:block w-5 h-5 text-amber-400" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 9h-1m15.364-6.364l-.707.707M6.343 17.657l-.707.707m12.728 0l-.707-.707M6.343 6.343l-.707-.707M12 8a4 4 0 100 8 4 4 0 000-8z" /></svg>
                     <svg class="block dark:hidden w-5 h-5 text-slate-600" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" /></svg>
                 </button>
-                <nav class="flex items-center gap-4 border-l border-slate-200 dark:border-slate-700 pl-4">
+                <nav id="nav-content" class="flex items-center gap-4 border-l border-slate-200 dark:border-slate-700 pl-4">
                     {% if user %}
                         <a href="/manager" class="flex items-center gap-2 group">
                             <span class="text-sm font-bold text-slate-700 dark:text-slate-200 group-hover:text-emerald-500 transition-colors">{{ user.username }}</span>
@@ -38,7 +37,7 @@
         </div>
     </header>
 
-    <div id="pjax-container" class="pt-24 pb-12 animate-fade">
+    <div id="pjax-container" class="pt-24 pb-12">
         <main class="max-w-md mx-auto px-6 py-12">
             <div class="card-base p-10">
                 <div class="text-center mb-10">
